# ros_aruco_opencv

./: CHANGELOG.rst  LICENSE  README.md  package.xml
.github/workflows/: ci-foxy.yml  ci-humble.yml  ci-iron.yml  ci-rolling.yml
aruco_opencv/: CHANGELOG.rst  CMakeLists.txt  nodelet_plugins.xml  package.xml
aruco_opencv/cfg/: ArucoDetector.cfg
aruco_opencv/config/: aruco_tracker.yaml  board_descriptions.yaml  single_marker_tracker.yaml
aruco_opencv/include/aruco_opencv/: parameters.hpp  utils.hpp
aruco_opencv/launch/: aruco_tracker.launch  aruco_tracker.launch.xml  single_marker_tracker.launch.xml
aruco_opencv/scripts/: create_board  create_marker
aruco_opencv/src/: aruco_tracker.cpp  single_marker_tracker.cpp  utils.cpp
aruco_opencv_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
aruco_opencv_msgs/msg/: ArucoDetection.msg  BoardPose.msg  MarkerDetection.msg
cfg/: ArucoDetector.cfg
config/: single_marker_tracker.yaml
launch/: single_marker_tracker.launch
msg/: MarkerDetection.msg  MarkerPose.msg
src/: single_marker_tracker.cpp
